--- a/packaging/arcollect.wxs
+++ b/packaging/arcollect.wxs
@@ -41,7 +41,7 @@
 		</Feature>
 		<UIRef Id="WixUI_InstallDir" />
 		<UIRef Id="WixUI_ErrorProgressText" />
-		<WixVariable Id="WixUILicenseRtf" Value="../COPYING.rtf" />
+		<WixVariable Id="WixUILicenseRtf" Value="$(var.copying_rtf_path)" />
 		<Property Id="WIXUI_EXITDIALOGOPTIONALTEXT" Value="IMPORTANT!!! You can't save artworks without the associated web-extension. Go on
 http://github.com/DevilishSpirits/arcollect/releases/tag/v$(var.ARCOLLECT_VERSION) and click on your browser extension :
  - For Firefox, click on the .xpi file
