[WiX packaging] Make use of ProgramFiles6432Folder

--- a/packaging/arcollect.wxs
+++ b/packaging/arcollect.wxs
@@ -5,7 +5,7 @@
 		<Media Id='1' Cabinet='Main.cab' EmbedCab='yes' />
 		<Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR" />
 		<Directory Id='TARGETDIR' Name='SourceDir'>
-			<Directory Id='$(var.WIX_PFiles)' Name='PFiles'>
+			<Directory Id='ProgramFiles6432Folder' Name='PFiles'>
 				<Directory Id='INSTALLDIR' Name='Arcollect'>
 					<Component Id='MainProgram' Guid='7D81775F-83F1-4F22-985B-FDB3C8ABD471'>
 						<File Id='ArcollectEXE' Name='arcollect.exe' DiskId='1' Source='$(var.built_arcollect_exe)' KeyPath='yes'>
