--- a/packaging/arcollect.wxs
+++ b/packaging/arcollect.wxs
@@ -1,7 +1,8 @@
-<?xml version='1.0' encoding='windows-1252'?>
+<?xml version='1.0' encoding='us-ascii'?>
 <Wix xmlns='http://schemas.microsoft.com/wix/2006/wi'>
-	<Product Name='Arcollect' Id='7D81775F-86C7-4D14-AEC0-86416A69ABDE' UpgradeCode='7D81775F-7349-453F-94F6-BCB5110BA4FD' Language='1033' Codepage='1252' Version='$(var.ARCOLLECT_VERSION)' Manufacturer='DevilishSpirits'>
-		<Package Id='*' Keywords='Installer' Description="Arcollect $(var.ARCOLLECT_VERSION) Installer" Comments='$(var.ARCOLLECT_SUMMARY)' Manufacturer='DevilishSpirits' InstallerVersion='310' Languages='1033' Compressed='yes' SummaryCodepage='1252' />
+	<?include $(var.config_wxi) ?>
+	<Product Name='Arcollect' Id='7D81775F-86C7-4D14-AEC0-86416A69ABDE' UpgradeCode='7D81775F-7349-453F-94F6-BCB5110BA4FD' Language='1033' Codepage='20127' Version='$(var.ARCOLLECT_VERSION)' Manufacturer='DevilishSpirits'>
+		<Package Id='*' Keywords='Installer' Description="Arcollect $(var.ARCOLLECT_VERSION) Installer" Comments='$(var.ARCOLLECT_SUMMARY)' Manufacturer='DevilishSpirits' InstallerVersion='310' Languages='1033' Compressed='yes' SummaryCodepage='20127' />
 		<Media Id='1' Cabinet='Main.cab' EmbedCab='yes' />
 		<Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR" />
 		<Directory Id='TARGETDIR' Name='SourceDir'>
